<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <!-- Title Label -->
            <TextView android:id="@+id/txtv_offer_title"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingBottom="10dp"
                      android:textSize="25sp"
                      android:textStyle="bold"
                      android:textColor="#43bd00"/>
            <!-- Description Label -->
            <TextView android:id="@+id/txtv_offer_description"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#acacac"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/list_title"
                        android:paddingRight="5dp"
                        android:text="@string/lbl_available_from"/>
                <TextView
                        android:id="@+id/txtv_offer_startDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:textAppearance="@style/list_title"
                        android:text="@string/lbl_available_to"/>
                <TextView
                        android:id="@+id/txtv_offer_endDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/list_title"
                    android:text="@string/lbl_eligible_to"/>
            <TextView
                    android:id="@+id/txtv_offer_criteria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/txtv_offer_inspectionResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginTop="50dp"
                    android:visibility="gone"/>
            <TextView
                    android:id="@+id/txtv_offer_inspectionResultError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
    <Button
            android:id="@+id/btn_scan_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_scan_qr"
            android:onClick="scanQR"/>
    <RelativeLayout
            android:id="@+id/rellay_serial_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
        <ImageButton
                android:id="@+id/btn_check_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@null"
                android:src="@drawable/action_search"
                android:onClick="checkSerialNo"/>
        <EditText
                android:id="@+id/etxt_serial_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/btn_check_serial"
                android:layout_toRightOf="@+id/btn_clear_serial"
                android:layout_alignBottom="@id/btn_check_serial"
                android:layout_marginTop="4dp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="12"
                android:hint="@string/lbl_enter_serial"/>
        <ImageButton
                android:id="@+id/btn_clear_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:contentDescription="@null"
                android:src="@drawable/content_remove"
                android:onClick="clearContent"/>
    </RelativeLayout>
</LinearLayout>
